[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "bench15"
harness = false

[[bench]]
name = "bench16"
harness = false

[[bench]]
name = "bench_combined"
harness = false