[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
radix-heap = "0.4.2"
rayon = "1.8.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "bench2"
harness = false

[[bench]]
name = "bench3"
harness = false

[[bench]]
name = "bench4"
harness = false

[[bench]]
name = "bench5"
harness = false

[[bench]]
name = "bench6"
harness = false

[[bench]]
name = "bench7"
harness = false

[[bench]]
name = "bench8"
harness = false

[[bench]]
name = "bench9"
harness = false

[[bench]]
name = "bench10"
harness = false

[[bench]]
name = "bench11"
harness = false

[[bench]]
name = "bench12"
harness = false

[[bench]]
name = "bench13"
harness = false

[[bench]]
name = "bench14"
harness = false

[[bench]]
name = "bench15"
harness = false

[[bench]]
name = "bench16"
harness = false

[[bench]]
name = "bench17"
harness = false

[[bench]]
name = "bench18"
harness = false

[[bench]]
name = "bench19"
harness = false

[[bench]]
name = "bench_combined"
harness = false